--- a/FrankLiu/Pages/Shared/_Layout.cshtml
+++ b/FrankLiu/Pages/Shared/_Layout.cshtml
@@ -21,6 +21,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/account/login">Login</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/userroles/HumanResource">Human Resource</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/userroles/Settings">Settings</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/userroles/HRManager">HR Manager</a>
+                        </li>
                     </ul>
                 </div>
             </div>
