--- a/FrankLiu/Pages/Shared/_Layout.cshtml
+++ b/FrankLiu/Pages/Shared/_Layout.cshtml
@@ -16,11 +16,9 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/account/login">Login</a>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/userroles/HumanResource">Human Resource</a>
                         </li>
@@ -32,6 +30,11 @@
                         </li>
                     </ul>
                 </div>
+
+                <div class="mr-2">
+                    <partial name = "_LoginStatusPartial">
+                </div>
+
             </div>
         </nav>
     </header>
