video 9 _ policy authorization

--- a/FrankLiu/Pages/Account/Login.cshtml
+++ b/FrankLiu/Pages/Account/Login.cshtml
@@ -2,7 +2,7 @@
 @model FrankLiu.Pages.Account.LoginModel
 
 
-<div class="container border col-6 p-5 mt-5">
+<div class="contrainer col-lg-6 p-5 mt-5">
     <form method="post">
         <br />        
         <div class="text-danger" asp-validation-summary="ModelOnly"></div>
