--- a/FrankLiu_BlazorServer/Shared/NavMenu.razor
+++ b/FrankLiu_BlazorServer/Shared/NavMenu.razor
@@ -13,8 +13,26 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/login">
+            <NavLink class="nav-link" href="/loginPage">
                 <span class="oi oi-plus" aria-hidden="true"></span> Login
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/simpleauthorization">
+                <span class="oi oi-plus" aria-hidden="true"></span> Simple Authorization
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/roleAuthorization">
+                <span class="oi oi-plus" aria-hidden="true"></span> Role Authorization
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/policyAuthorization">
+                <span class="oi oi-plus" aria-hidden="true"></span> Policy Authorization
             </NavLink>
         </div>
     </nav>
