--- a/FrankLiu/Pages/Account/Login.cshtml
+++ b/FrankLiu/Pages/Account/Login.cshtml
@@ -17,7 +17,7 @@
         <span class="text-danger" asp-validation-for="Credential.Password"></span>
 
         <br />
-        <input type="submit"  asp-for="Credential.RememberMe" class="form-check-input"/>
+        <input type="checkbox" asp-for="Credential.RememberMe" class="form-check-input"/>
         <label asp-for="Credential.RememberMe"></label>
 
         <br />
