--- a/FrankLiu_BlazorServer/_Imports.razor
+++ b/FrankLiu_BlazorServer/_Imports.razor
@@ -9,4 +9,5 @@
 @using FrankLiu_BlazorServer
 @using FrankLiu_BlazorServer.Shared
 @using FrankLiu_BlazorServer.Models
+@using FrankLiu_BlazorServer.Pages.User
 
