--- a/FrankLiu_BlazorServer/App.razor
+++ b/FrankLiu_BlazorServer/App.razor
@@ -1,11 +1,20 @@
 ﻿<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+
+        <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" >
+            <NotAuthorized>
+                <Login/>
+			</NotAuthorized>
+		</AuthorizeRouteView>
+
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+
     </Found>
     <NotFound>
-        <LayoutView Layout="@typeof(MainLayout)">
+        <CascadingAuthenticationState>
+            <LayoutView Layout="@typeof(MainLayout)">
             <p role="alert">Sorry, there's nothing at this address.</p>
         </LayoutView>
+		</CascadingAuthenticationState>        
     </NotFound>
 </Router>
